1.增加一个设备树，增加设备组

--- a/Source/LJH.Attendance.BLL/LJH.Attendance.BLL.csproj
+++ b/Source/LJH.Attendance.BLL/LJH.Attendance.BLL.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AttendanceLogBLL.cs" />
+    <Compile Include="DeviceGroupBLL.cs" />
     <Compile Include="HolidayBLL.cs" />
     <Compile Include="OTTypeBLL.cs" />
     <Compile Include="ParameterBLL.cs" />
