--- a/Source/Device/LJH.Attendance.Device.csproj
+++ b/Source/Device/LJH.Attendance.Device.csproj
@@ -82,6 +82,7 @@
     <Compile Include="IReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReaderFactory.cs" />
+    <Compile Include="SearchforUSBCom.cs" />
     <Compile Include="ZKFingerKeeper.cs" />
   </ItemGroup>
   <ItemGroup>
