--- a/Source/Device/LJH.Attendance.Device.csproj
+++ b/Source/Device/LJH.Attendance.Device.csproj
@@ -65,6 +65,10 @@
       <HintPath>..\Reference\Interop.zkemkeeper.dll</HintPath>
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
+    <Reference Include="Interop.ZKFPEngXControl">
+      <HintPath>..\Reference\Interop.ZKFPEngXControl.dll</HintPath>
+      <EmbedInteropTypes>True</EmbedInteropTypes>
+    </Reference>
     <Reference Include="LJH.GeneralLibrary, Version=2.0.2013.1110, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Reference\LJH.GeneralLibrary.dll</HintPath>
