1.员工支持拖放采用一种妥协的方式,即员工网格第一列用于拖放,点击其它列不会拖放

--- a/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
+++ b/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
@@ -781,6 +781,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="attendance.ico" />
+    <None Include="Resources\drag.png" />
     <None Include="Resources\template.png" />
     <None Include="Resources\img15.jpg" />
   </ItemGroup>
