--- a/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
+++ b/Source/LJH.Attendance.UI/LJH.Attendance.UI.csproj
@@ -356,11 +356,11 @@
     <Compile Include="FrmShiftMaster.Designer.cs">
       <DependentUpon>FrmShiftMaster.cs</DependentUpon>
     </Compile>
-    <Compile Include="FrmShiftResultDetail_Old.cs">
+    <Compile Include="FrmShiftResultMaster.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="FrmShiftResultDetail_Old.Designer.cs">
-      <DependentUpon>FrmShiftResultDetail_Old.cs</DependentUpon>
+    <Compile Include="FrmShiftResultMaster.Designer.cs">
+      <DependentUpon>FrmShiftResultMaster.cs</DependentUpon>
     </Compile>
     <Compile Include="FrmShiftResultMonthDetail.cs">
       <SubType>Form</SubType>
@@ -647,8 +647,8 @@
     <EmbeddedResource Include="FrmShiftResultMonthDetail.resx">
       <DependentUpon>FrmShiftResultMonthDetail.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="FrmShiftResultDetail_Old.resx">
-      <DependentUpon>FrmShiftResultDetail_Old.cs</DependentUpon>
+    <EmbeddedResource Include="FrmShiftResultMaster.resx">
+      <DependentUpon>FrmShiftResultMaster.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmShiftResultStatistics.resx">
       <DependentUpon>FrmShiftResultStatistics.cs</DependentUpon>
