--- a/Source/Device/LJH.Attendance.Device.csproj
+++ b/Source/Device/LJH.Attendance.Device.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ClearDataFlag.cs" />
+    <Compile Include="DeviceCommandResult.cs" />
     <Compile Include="IReader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReaderFactory.cs" />
