1. 设备增加一个验证方式字段

--- a/Source/LJH.Attendance.Model/LJH.Attendance.Model.csproj
+++ b/Source/LJH.Attendance.Model/LJH.Attendance.Model.csproj
@@ -136,6 +136,7 @@
     <Compile Include="TASheetGroup.cs" />
     <Compile Include="TripType.cs" />
     <Compile Include="VacationType.cs" />
+    <Compile Include="VerifyCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resource\Resource1.resx">
